Added all the pages in html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Community Science Museum">
     <title>Science Museum - Home</title>
 </head>
 <body>
+    <header>
+        <div class="nav-container">
+            <input type="checkbox" id="hamburger-menu">
+            <label for="hamburger-menu"><i class="fas fa-bars"></i>
+            </label>
+            <nav>
+              <ul>
+                <li><a href="/new_arrivals.html">Women</a></li>
+                <li><a href="/new_arrivals.html">Men</a></li>
+                <li><a href="/about_us.html">About Us</a></li>
+                <li><a href="/customer_service.html">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+    </header>
     
 </body>
 </html>
