--- a/index.html
+++ b/index.html
@@ -9,20 +9,40 @@
 </head>
 <body>
     <header>
+        <div>
+            <p>Community</p>
+            <p>Science <span class="on-page">Museum</span></p>
+        </div>
         <div class="nav-container">
             <input type="checkbox" id="hamburger-menu">
             <label for="hamburger-menu"><i class="fas fa-bars"></i>
             </label>
             <nav>
               <ul>
-                <li><a href="/new_arrivals.html">Women</a></li>
-                <li><a href="/new_arrivals.html">Men</a></li>
-                <li><a href="/about_us.html">About Us</a></li>
-                <li><a href="/customer_service.html">Contact</a></li>
+                <li><a href="/explore.html">Explore</a></li>
+                <li><a href="/events.html">Events</a></li>
+                <li><a href="/exhibitions.html">Exhibitions</a></li>
+                <li><a href="/visit.html">Visit</a></li>
+                <li><a href="/get_involed.html">Get Involved</a></li>
               </ul>
             </nav>
           </div>
     </header>
+    <main>
+        <section class="opening">
+            <div class="opening-content">
+                <h2>Welcome to our opening week</h2>
+                <p>Admission is free, but we recommend booking 
+                    tickets for the first week of opening</p>
+            </div>
+            <div>
+                <a href="/visit.html" class="cta">TICKETS</a>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
