--- a/index.html
+++ b/index.html
@@ -43,6 +43,26 @@
                 <a href="/visit.html" class="cta">TICKETS</a>
             </div>
         </section>
+        <section class="content-overview">
+            <div class="content-img events">
+                <a href="/events.html">Events</a>
+            </div>
+            <div class="content-img explore"></div>
+                <a href="/explore.html">Explore</a>
+            </div>
+            <div class="content-img exhibitions"></div>
+                <a href="/exhibitions.html">Exhibitions</a>
+            </div>
+            <div class="content-img visit"></div>
+                <a href="/visit.html">Visit</a>
+            </div>
+            <div class="content-img get-involved"></div>
+                <a href="/get_involed.html">Get Involved</a>
+            </div>
+            <div class="content-img contact"></div>
+                <a href="/visit.html">Contact</a>
+            </div>
+        </section>
     </main>
     <footer>
 
