Added overlay to img to change color

--- a/index.html
+++ b/index.html
@@ -44,23 +44,48 @@
             </div>
         </section>
         <section class="content-overview">
+
             <div class="content-img events">
-                <a href="/events.html">Events</a>
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <a href="/events.html">Events</a>
+                    </div>
+                </div>
             </div>
             <div class="content-img exhibitions">
-                <a href="/exhibitions.html">Exhibitions</a>
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <a href="/exhibitions.html">Exhibitions</a>
+                    </div>
+                </div>
             </div>
             <div class="content-img explore">
-                <a href="/explore.html">Explore</a>
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <a href="/explore.html">Explore</a>
+                    </div>
+                </div>
             </div>
             <div class="content-img visit">
-                <a href="/visit.html">Visit</a>
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <a href="/visit.html">Visit</a>
+                    </div>
+                </div>
             </div>
             <div class="content-img get-involved">
-                <a href="/get_involed.html">Get Involved</a>
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <a href="/get_involed.html">Get Involved</a>
+                    </div>
+                </div> 
             </div>
             <div class="content-img contact">
-                <a href="/visit.html">Contact</a>
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <a href="/visit.html">Contact</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
