Made overlay changed on opening img, changed cta padding

--- a/index.html
+++ b/index.html
@@ -33,18 +33,19 @@
           </div>
     </header>
     <main>
-        <section class="opening">
-            <div class="opening-content">
-                <h2>Welcome to our opening week</h2>
-                <p>Admission is free, but we recommend booking 
-                    tickets for the first week of opening</p>
+        <div class="opening">
+            <div class="overlay">
+                <div class="overlay-text test">
+                    <h1>Welcome to our opening week</h1>
+                    <p>Admission is free, but we recommend booking 
+                        tickets for the first week of opening</p>
+                </div>
+                <div class="overlay-text cta">
+                    <a href="/visit.html" class="cta">TICKETS</a>
+                </div>
             </div>
-            <div>
-                <a href="/visit.html" class="cta">TICKETS</a>
-            </div>
-        </section>
+        </div>
         <section class="content-overview">
-
             <div class="content-img events">
                 <div class="overlay">
                     <div class="overlay-text">
