Changed pafdding and margin on body so header and opening section could stretch

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/media.css">
     <title>Science Museum - Home</title>
 </head>
-<body>
+<body class="home-page-body">
     <header>
         <div>
             <p>Community</p>
