Added logo class and changed the style to logo

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 </head>
 <body class="home-page-body">
     <header>
-        <div>
-            <p>Community</p>
-            <p>Science <span class="on-page">Museum</span></p>
+        <div class="logo">
+            <a href="index.html">Community <span class="wrap-span">Science <span class="on-page">Museum</span></span></a>
         </div>
         <div class="nav-container">
             <input type="checkbox" id="hamburger-menu">
