started with media query for front page

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             </nav>
           </div>
     </header>
-    <main>
+    <main class="main">
         <div class="opening">
             <div class="overlay">
-                <div class="overlay-text test">
+                <div class="overlay-text">
                     <h1>Welcome to our opening week</h1>
                     <p>Admission is free, but we recommend booking 
                         tickets for the first week of opening</p>
