Started teh explore HTML and CSS file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media.css">
-    <title>Science Museum - Home</title>
+    <title>Community Science Museum - Home</title>
 </head>
 <body class="home-page-body">
     <header>
