Added h1 and teh differnet sections to explore

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/media.css">
     <title>Community Science Museum - Home</title>
 </head>
-<body class="home-page-body">
+<body>
     <header>
         <div class="logo">
             <a href="index.html">Community <span class="wrap-span">Science <span class="on-page">Museum</span></span></a>
@@ -31,7 +31,7 @@
             </nav>
           </div>
     </header>
-    <main class="main">
+    <main class= "index-main">
         <div class="opening">
             <div class="overlay">
                 <div class="overlay-text">
