--- a/explore.html
+++ b/explore.html
@@ -31,7 +31,7 @@
             </nav>
           </div>
     </header>
-    <main>
+    <main class="categories">
         <h1>EXPLORE</h1>
         <section>
             <h2>KIDS</h2>
@@ -92,7 +92,7 @@
             </div>
             <div class="img-flex">
                 <img src="images/people-219985_1280.jpg" alt="Man looking into microscope">
-                <img src="images/mavis-cw-164128.jpg" alt="Exhibits lined up in glass fixtures down a hall">
+                <img src="images/mavis-cw-164128_1.jpg" alt="Exhibits lined up in glass fixtures down a hall">
                 <img src="images/heart-2607178_1920.jpg" alt="A plactic model of a heart">
             </div>
         </section>
