--- a/explore.html
+++ b/explore.html
@@ -22,7 +22,7 @@
             </label>
             <nav>
               <ul>
-                <li><a href="/explore.html">Explore</a></li>
+                <li><a href="/explore.html" class="on-page">Explore</a></li>
                 <li><a href="/events.html">Events</a></li>
                 <li><a href="/exhibitions.html">Exhibitions</a></li>
                 <li><a href="/visit.html">Visit</a></li>
@@ -31,72 +31,73 @@
             </nav>
           </div>
     </header>
-    <main class="categories">
+    <main>
         <h1>EXPLORE</h1>
-        <section>
-            <h2>KIDS</h2>
-            <div class="description">
-                <p>Are you a young person looking to learn more about 
-                    science? Come on down to our museum, there’s plenty 
-                    to see and do.You can learn about Newtonian physics 
-                    from our bumper swing, or why not travel back in time 
-                    and meet our resident Woolly Mammoth? </p>
-                <p>Our exhibits are designed to be accessible for interested 
-                    minds, so make sure you come ready to learn and 
-                    explore.</p>
-                <p>We also have the Young Stars club which meets once a 
-                    week on a Saturday between 10:00 and 13:00 where 
-                    you’ll get to explore and experiment with our team of 
-                    experts.</p>
-                <p>During the school holidays we run special holiday clubs 
-                    where you can join other children your age to go on a 
-                    journey of discovery. Each holiday we pick a new theme 
-                    to explore. To find out more about the 
-                    holiday club and how you can join, send us a message.</p>
-            </div>
-            <div class="img-flex">
-                <img src="images/pexels-rfstudio-3825541.jpg" alt="Young man looking into microscope">
-                <img src="images/pexels-mart-production-8471897.jpg" alt="Young girl holding skeleton">
-                <img src="images/billetto-editorial-334686.jpg" alt="Young boy painting with VR glasses">
-            </div>
-        </section>
-        <section>
-            <h2>FOR TEACHERS</h2>
-            <div class="description">
-                <p>As a community-driven museum, we want to work with 
-                    schools to create places of learning and exploring. 
-                    Our team are on hand to give your students guided 
-                    tours of the museum, teach them in our learning 
-                    laboratory, and provide great video presentations that 
-                    will excite and inspire them.</p>
-                <p>Please get in touch with us here to find out more about 
-                    our facilities and to arrange a time to bring your 
-                    students through for a visit.</p>
-            </div>
-            <div class="img-flex">
-                <img src="images/pexels-thirdman-8926832.jpg" alt="Three kids exploring with water inside sylinder">
-                <img src="images/pexels-jeswin-thomas-5265274.jpg" alt="Teenanger learning how to build tech">
-                <img src="images/pexels-mart-production-8471946.jpg" alt="Two girls looking into microscope and drawing on blackboard">
-            </div>
-        </section>
-        <section>
-            <h2>RESEARCHERS</h2>
-            <div class="description">
-                <p>Are you looking to get involved with our team of 
-                    researchers and academics? Our museum offers various 
-                    ways for you to use our resources and contribute 
-                    towards them. We have online records, laboratory 
-                    space, and a working relationship with a number of 
-                    universities around the country. Get in contact with
-                    us to for any questions you might have.</p>
-            </div>
-            <div class="img-flex">
-                <img src="images/people-219985_1280.jpg" alt="Man looking into microscope">
-                <img src="images/mavis-cw-164128_1.jpg" alt="Exhibits lined up in glass fixtures down a hall">
-                <img src="images/heart-2607178_1920.jpg" alt="A plactic model of a heart">
-            </div>
+        <section class="categories">
+            <section class="description">
+                <h2>KIDS</h2>
+                <div>
+                    <p>Are you a young person looking to learn more about 
+                        science? Come on down to our museum, there’s plenty 
+                        to see and do.You can learn about Newtonian physics 
+                        from our bumper swing, or why not travel back in time 
+                        and meet our resident Woolly Mammoth? </p>
+                    <p>Our exhibits are designed to be accessible for interested 
+                        minds, so make sure you come ready to learn and 
+                        explore.</p>
+                    <p>We also have the Young Stars club which meets once a 
+                        week on a Saturday between 10:00 and 13:00 where 
+                        you’ll get to explore and experiment with our team of 
+                        experts.</p>
+                    <p>During the school holidays we run special holiday clubs 
+                        where you can join other children your age to go on a 
+                        journey of discovery. Each holiday we pick a new theme 
+                        to explore. To find out more about the 
+                        holiday club and how you can join, send us a message.</p>
+                </div>
+                <div class="img-flex">
+                    <img src="images/pexels-rfstudio-3825541.jpg" alt="Young man looking into microscope">
+                    <img src="images/pexels-mart-production-8471897.jpg" alt="Young girl holding skeleton">
+                    <img src="images/billetto-editorial-334686.jpg" alt="Young boy painting with VR glasses">
+                </div>
+            </section>
+            <section class="description">
+                <h2>FOR TEACHERS</h2>
+                <div>
+                    <p>As a community-driven museum, we want to work with 
+                        schools to create places of learning and exploring. 
+                        Our team are on hand to give your students guided 
+                        tours of the museum, teach them in our learning 
+                        laboratory, and provide great video presentations that 
+                        will excite and inspire them.</p>
+                    <p>Please get in touch with us here to find out more about 
+                        our facilities and to arrange a time to bring your 
+                        students through for a visit.</p>
+                </div>
+                <div class="img-flex">
+                    <img src="images/pexels-thirdman-8926832.jpg" alt="Three kids exploring with water inside sylinder">
+                    <img src="images/pexels-jeswin-thomas-5265274.jpg" alt="Teenanger learning how to build tech">
+                    <img src="images/pexels-mart-production-8471946.jpg" alt="Two girls looking into microscope and drawing on blackboard">
+                </div>
+            </section>
+            <section class="description">
+                <h2>RESEARCHERS</h2>
+                <div>
+                    <p>Are you looking to get involved with our team of 
+                        researchers and academics? Our museum offers various 
+                        ways for you to use our resources and contribute 
+                        towards them. We have online records, laboratory 
+                        space, and a working relationship with a number of 
+                        universities around the country. Get in contact with
+                        us to for any questions you might have.</p>
+                </div>
+                <div class="img-flex">
+                    <img src="images/people-219985_1280.jpg" alt="Man looking into microscope">
+                    <img src="images/mavis-cw-164128_1.jpg" alt="Exhibits lined up in glass fixtures down a hall">
+                    <img src="images/heart-2607178_1920.jpg" alt="A plactic model of a heart">
+                </div>
+            </section>
         </section>
     </main>
-    
 </body>
 </html>
