All img added to page

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -35,7 +35,7 @@
         <h1>EXHIBITIONS</h1>
         <section class="exhibitions">
             <div>
-                <img src="" alt="">
+                <img src="images/celso-405219.jpg" alt="Cycle of the moon phases">
                 <h2>Cosmology</h2>
                 <p>Explore the wonders of our cosmos. Our fantastic 
                     exhibition, ‘The Sky Above Us’, explores the night sky 
@@ -48,7 +48,7 @@
                     exploration of the planets in our solar system.</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="images/pexels-jonathan-cooper-9660895.jpg" alt="Small skeleton of dinosaur">
                 <h2>Evolution</h2>
                 <p>For centuries, philosophers and scientists have wrestled 
                     with the question of our origins. Where do we come from 
@@ -62,7 +62,7 @@
                     Dodos, and a number of dinosaurs too.</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="images/pexels-cdc-3992937.jpg" alt="Germs enlarged under the microscope">
                 <h2>Biology and Medicine</h2>
                 <p>From micro-organisms to the human body, major 
                     breakthroughs in biology are offering us unique insights 
@@ -79,7 +79,7 @@
                     wild. Often our fellow creatures have beat us to it.</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="images/pexels-tara-winstead-8386434.jpg" alt="A robot hand and a human hand about to touch">
                 <h2>Robotics and AI</h2>
                 <p>The information revolution is here and robotics and 
                     artificial intelligence are the science of the future. 
@@ -89,7 +89,7 @@
                     </p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="images/pexels-catherine-sheila-2409022.jpg" alt="Plastic waste on the beach">
                 <h2>Ecology</h2>
                 <p>As we learn more and more of the impact humans are 
                     having on the planet, the more important it becomes that 
