CHanged img on page, added an extra exhibition

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -34,7 +34,7 @@
     <main>
         <h1>EXHIBITIONS</h1>
         <section class="exhibitions">
-            <div>
+            <div class="exhibitions-info-box">
                 <img src="images/celso-405219.jpg" alt="Cycle of the moon phases">
                 <h2>Cosmology</h2>
                 <p>Explore the wonders of our cosmos. Our fantastic 
@@ -47,7 +47,7 @@
                     Arab traders, to Galileo’s telescope, to the latest
                     exploration of the planets in our solar system.</p>
             </div>
-            <div>
+            <div class="exhibitions-info-box">
                 <img src="images/pexels-jonathan-cooper-9660895.jpg" alt="Small skeleton of dinosaur">
                 <h2>Evolution</h2>
                 <p>For centuries, philosophers and scientists have wrestled 
@@ -61,7 +61,7 @@
                     didn’t survive, including our Woolly Mammoth, the 
                     Dodos, and a number of dinosaurs too.</p>
             </div>
-            <div>
+            <div class="exhibitions-info-box">
                 <img src="images/pexels-cdc-3992937.jpg" alt="Germs enlarged under the microscope">
                 <h2>Biology and Medicine</h2>
                 <p>From micro-organisms to the human body, major 
@@ -78,7 +78,7 @@
                     only from the lab, but also from observing animals in the 
                     wild. Often our fellow creatures have beat us to it.</p>
             </div>
-            <div>
+            <div class="exhibitions-info-box">
                 <img src="images/pexels-tara-winstead-8386434.jpg" alt="A robot hand and a human hand about to touch">
                 <h2>Robotics and AI</h2>
                 <p>The information revolution is here and robotics and 
@@ -88,8 +88,8 @@
                     shake the hand of Rob the Robot.
                     </p>
             </div>
-            <div>
-                <img src="images/pexels-catherine-sheila-2409022.jpg" alt="Plastic waste on the beach">
+            <div class="exhibitions-info-box">
+                <img src="images/Re-size/pexels-catherine-sheila-2409022.jpg" alt="Plastic waste on the beach">
                 <h2>Ecology</h2>
                 <p>As we learn more and more of the impact humans are 
                     having on the planet, the more important it becomes that 
@@ -101,6 +101,17 @@
                     the positive ways we can all contribute to a brighter 
                     future.</p>
             </div>
+            <div class="exhibitions-info-box">
+                <img src="images/pexels-flickr-157039.jpg" alt="A line of windmills by the sea">
+                <h2>Energetica *</h2>
+                <p>From the NEMO Science Museum in Amsterdam, the Energetica 
+                    exhibition is coming to the Community Science Museum. It’s a 
+                    series of installations that allow visitors to experience the 
+                    power of the elements as we harness them. From solar energy 
+                    powering lighting, to ‘Wind Island’ that shows how turbines 
+                    are able to use and control wind to create power.
+                    </p>
+                    <p>* Temporary exhibition on from Jan - March 2022</p>
         </section>
     </main>
     
