Done with exhibitions page

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/exhibitions.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media.css">
-    <title>Document</title>
+    <title>Community Science Museum - Exhibitions</title>
 </head>
 <body>
     <header>
@@ -89,7 +89,7 @@
                     </p>
             </div>
             <div class="exhibitions-info-box">
-                <img src="images/Re-size/pexels-catherine-sheila-2409022.jpg" alt="Plastic waste on the beach">
+                <img src="images/pexels-catherine-sheila-2409022.jpg" alt="Plastic waste on the beach">
                 <h2>Ecology</h2>
                 <p>As we learn more and more of the impact humans are 
                     having on the planet, the more important it becomes that 
@@ -111,9 +111,9 @@
                     powering lighting, to ‘Wind Island’ that shows how turbines 
                     are able to use and control wind to create power.
                     </p>
-                    <p>* Temporary exhibition on from Jan - March 2022</p>
+                    <p><span class="temporary">* Temporary exhibition on from Jan - March 2022</span></p>
         </section>
     </main>
-    
+    <footer></footer>
 </body>
 </html>
