Added padding to explore and "on page" for the header

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -24,7 +24,7 @@
               <ul>
                 <li><a href="/explore.html">Explore</a></li>
                 <li><a href="/events.html">Events</a></li>
-                <li><a href="/exhibitions.html">Exhibitions</a></li>
+                <li><a href="/exhibitions.html" class="on-page">Exhibitions</a></li>
                 <li><a href="/visit.html">Visit</a></li>
                 <li><a href="/get_involed.html">Get Involved</a></li>
               </ul>
