--- a/exhibitions.html
+++ b/exhibitions.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="View our Exhibitions at the Community Science Museum">
     <script src="https://kit.fontawesome.com/97ab1123b3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/exhibitions.css">
+    <link rel="stylesheet" href="css/get_involved.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media.css">
     <title>Community Science Museum - Exhibitions</title>
