Added contact cta to get involved

--- a/get_involed.html
+++ b/get_involed.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get Involved at the Community Science Museum">
     <script src="https://kit.fontawesome.com/97ab1123b3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/get_involved.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media.css">
     <title>Community Science Museum - Exhibitions</title>
@@ -33,7 +34,7 @@
     <main>
         <h1>Get Involved</h1>
         <section class="get-involved">
-            <section>
+            <section class="get-invovled-info">
                 <h2>Support</h2>
                 <p>There are various ways you can support the museum. 
                     Donations are very welcome and are an important way 
@@ -45,7 +46,7 @@
                     us know by contacting our Collections Department and 
                     they will be able to assist you.</p>    
             </section>
-            <section>
+            <section class="get-invovled-info">
                 <h2>Volunteer</h2>
                 <p>A number of people volunteer their time and effort to 
                     keep the displays in good order and ready for visitors to 
@@ -58,7 +59,7 @@
                     Please contact us if you’d like to find out more about 
                     how you can get involved.</p>
             </section>
-            <section>
+            <section class="get-invovled-info">
                 <h2>Internships</h2>
                 <p>Are you interested in working in a museum? Do you enjoy 
                     the fun and excitement of sharing the wonders of nature 
@@ -68,6 +69,9 @@
                     and people who are passionate about science and sharing 
                     it with the wider community.</p>
             </section>
+            <div class= "contact-cta">
+                <a href="/visit.html" class="cta">CONTACT</a>
+            </div>
         </section>
     </main>
 <body>
