Added title in meta

--- a/get_involed.html
+++ b/get_involed.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/get_involved.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media.css">
-    <title>Community Science Museum - Exhibitions</title>
+    <title>Community Science Museum - Get Involved</title>
 </head>
 <body>
     <header>
