--- a/events.html
+++ b/events.html
@@ -33,8 +33,8 @@
     </header>
     <main>
       <h1>EVENTS</h1>
-      <section>
-        <div>
+      <section class="events">
+        <div class="events-info-box">
           <img src="images\pexels-max-fischer-5212325.jpg" alt="Professor Sheila Widnall">
           <h2>Visiting Professor of Aeronautics</h2>
           <p>It is our pleasure to announce that Prof Sheila 
@@ -44,10 +44,10 @@
             lies in this exciting ‘space’.</p>
             <hr>
             <p><i class="fas fa-ticket-alt"></i>Free Admission</p>
-            <p><i class="fas fa-calendar-alt"></i> 11th, 12th and 13th of January 2022</p>
+            <p><i class="fas fa-calendar-alt"></i>11th, 12th and 13th of January 2022</p>
             <p><i class="fas fa-user-alt"></i>Suitable for ages 13+</p>
         </div>
-        <div>
+        <div class="events-info-box">
           <img src="images\roberto-nickson-396152-cropped.jpg" alt="Main hall of museum at night">
           <h2>Night at the Museum</h2>
           <p>Get your family together for an exciting night in 
@@ -57,10 +57,10 @@
             wonders of science.</p>
             <hr>
             <p><i class="fas fa-ticket-alt"></i>Free Admission</p>
-            <p><i class="fas fa-calendar-alt">16th of February 2022</i></p>
+            <p><i class="fas fa-calendar-alt"></i>16th of February 2022</i></p>
             <p><i class="fas fa-user-alt"></i>Suitable for ages 3+</p>
         </div>
-        <div>
+        <div class="events-info-box">
           <img src="images/learn-2405206_1920.jpg" alt="Young girl looking at equations on black board">
           <h2>School Holiday</h2>
           <p>Join our science club for kids aged 6-10 years 
@@ -68,13 +68,15 @@
             from 9am - 7 pm. The program is runned by 
             dedicated and passionate teachers. 
             Lunch included </p>
-            <p><i class="fas fa-ticket-alt">Free Admission</i></p>
-            <p><i class="fas fa-calendar-alt">Every Wednesday during July </i></p>
-            <p><i class="fas fa-user-alt"></i>Suitable for ages 6-10 years</p>
             <hr>
+            <p><i class="fas fa-ticket-alt"></i>Free Admission</p>
+            <p><i class="fas fa-calendar-alt"></i>Every Wednesday during July</p>
+            <p><i class="fas fa-user-alt"></i>Suitable for ages 6-10 years</p>
         </div>
       </section>
-
+      <div class= "contact-cta">
+        <a href="/visit.html" class="cta">CONTACT</a>
+    </div>
     </main>
     <footer></footer>
 </body>
