Did some changes to the cta

--- a/explore.html
+++ b/explore.html
@@ -97,6 +97,9 @@
                     <img src="images/heart-2607178_1920.jpg" alt="A plactic model of a heart">
                 </div>
             </section>
+            <div class= "contact-cta">
+                <a href="/visit.html#contact" class="cta">CONTACT</a>
+            </div>
         </section>
     </main>
 </body>
