added placeholder inside sign up section for email

--- a/visit.html
+++ b/visit.html
@@ -155,7 +155,7 @@
         </section>
         <div class="sign-up">
             <label for="singup">Sign up For Our Newsletter</label>
-            <input type="email" name="signup" id="signup">
+            <input type="email" name="signup" id="signup" placeholder="Your Email...">
         </div>
         <div>
             <input type="submit" class="cta" value="send">
