--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                 </form>
             </div>
           </div>
+        </div>
     </main>
     <footer>
         <div class="flex-info">
